[gd_scene load_steps=2 format=3 uid="uid://b3linnl0ykllx"]

[ext_resource type="Script" path="res://Scripts/GameData.gd" id="1_yhhtj"]

[node name="Game" type="Node3D"]
script = ExtResource("1_yhhtj")

[node name="CommandPrompt" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="PreviousCommands" type="VBoxContainer" parent="CommandPrompt"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="CommandPrompt/PreviousCommands"]
layout_mode = 2
text = "> Previous Command"

[node name="CommandLine" type="LineEdit" parent="CommandPrompt"]
layout_mode = 2
placeholder_text = "> Commands Go Here"
select_all_on_focus = true
